frontend/src/index.css
body {
  overflow-wrap: break-word;
  margin: 0;
  padding: 0;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
}

ul {
  padding-left: 0;
  margin-left: 1em;
  margin-top: 2em;
}

li {
  list-style-type: none;
  display: block;
  color:  black;
  background-color: white;
  cursor: pointer;
  border: 0 solid black;
  border-width: 1px 1px 0 0;
}

li.post {
  border: 2px groove gray;
  margin-bottom: .5em;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

li.comment {
  width: 100%;
  border: .125em groove gray;
  margin-bottom: 1em;
  margin-left: 1em;
}

/* Text Styling */ 

.subtitle-style {
  font-size: 1em;
  font-weight: 300;
  margin-left: 1.5em;
  width: fit-content;
}

.body-style {
  font-size: 1em;
  margin-left: .5em;
  margin-bottom: .5em;
  text-indent: 2em;
}

.uppercase {
  text-transform: uppercase;
}

.title-style {
  font-size: 2;
  font-weight: 300;
  margin: 0;
}

.title-header {
  text-align: left;
  margin: 1em .5em .4em;
  width: fit-content;
}

.count {
  padding: 0 1em;
}

/* Container Organization */ 

.vote {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 1em;
  margin-top: .75em;
  margin-bottom: .75em;
}

.sort-header {
  margin: 0 0 .5em;
  font-size: 1.25em;
  padding-left: 1em;
}

.body-layout {
  display: flex;
  width: inherit;
  align-items: flex-start;
  margin-bottom: 2em;
}

.nav-link {
  text-decoration: none;
  padding: .5em 1em;
  overflow: hidden;
  overflow-wrap: break-word;
  display: block;
  justify-content: space-between;
  align-items: center;
  color: black;
}

.container-comments {
  width: 100%;
  order: 2;
}

.container-post {
  order: 0;
}

.container-forms {
  order: 1;
}

.child-flex {
  max-width: 80%;
}

.list-tight {
  border: 0 solid black;
  border-width: 0 0 1px 1px;
}

.right-align {
  align-items: flex-end;
}

.vertical-center {
  margin: 0;
  align-self: middle;
}

.structure-flex-col {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.structure-flex-row {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

#editdeleteblock {
  justify-content: flex-end;
}

/* Container Styling */ 

.active {
  color: orange;
}

.main-body {
  padding-left: 2em;
  width: 40em; 
  margin-top: 1em;
}

.edit {
  align-self: flex-end;
  font-size: 1em;
  margin: .75em .75em .5em 0;
  border: solid black .125em;
}

.post {
  margin: 1em 1em 1em 1em;
  font-size: 1em;
  border: solid black .125em;
}

.item-width {
  max-width: 55%;
  width: fit-content;
}

.vote-score {
  font-weight: bold;
  align-self: flex-end;
  font-size: 1em;
  margin: .5em .75em .75em 0;
}

.form-style {
  padding: 8px 0;
  margin: 0 auto;
}

.form-style input {
  display: block;
  padding: 5px 10px;
  margin-bottom: 10px;
  font-size: inherit;
  background: transparent;
  border: none;
  border-bottom: 1px solid #ccc;
  width: 60%;
}

.form-style textarea {
  display: block;
  padding: 5px 10px;
  margin-top: 2em;
  margin-bottom: 1em;
  width:80%;
  height:8em;
  font-size: inherit;
  background: transparent;
  border: 1px solid #ccc;
}

.form-style button {
  margin: 1em;
  margin-right: 20%;
}

button {
  padding: .5em;
  float: right;
  font-size: inherit;
  border: 2px solid black;
  cursor: pointer;
}

.form-style button:hover {
  background-color: #999;
}

.ui-vote-score {
  width: 3em;
  text-align: center;
  line-height: 1.25;
  margin: .25em .5em;
  overflow: hidden;
  overflow-wrap: break-word;
}

select.sort {
  margin-left: 1em;
  border: none;
  background-color: #B9B9B9;
  width: 10em;
  height: 2em;
  font-size: 1em;
}

